--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">BotScript</string>
+    <string name="app_name">Makielskis Bot</string>
     <string name="menu_settings">Settings</string>
-
+    <string name="uiversion">0.0.10</string>
 </resources>
